tests/kiama/negative/type_errors/L2/8_badcase3.ob
MODULE badcase;

VAR
    avar : INTEGER;

BEGIN
    CASE avar OF
        avar : avar := 3
    END
END badcase.
